<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="@drawable/background">

    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
                    android:id="@+id/descriptionLinearLayout">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                        android:layout_gravity="center" android:id="@+id/top" android:layout_margin="10dp">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:id="@+id/userIconImageView" android:layout_gravity="left|center_vertical"
                       android:focusableInTouchMode="true" android:contentDescription="@string/userIcon"
                       android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
                       android:baselineAlignBottom="true"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/userName" android:id="@+id/userNameTextView" android:layout_gravity="center"
                      android:layout_toRightOf="@+id/userIconImageView" android:layout_centerInParent="true"/>
            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:id="@+id/imageButtonUpload" android:layout_gravity="center_vertical|right"
                         android:background="@drawable/cloud_upload" android:contentDescription="@string/uploadButton"
                         android:clickable="true" android:layout_alignParentTop="false"
                         android:layout_alignParentRight="false" android:layout_alignWithParentIfMissing="false"
                         android:baselineAlignBottom="false" android:layout_toLeftOf="@+id/homeImageButton"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/homeImageButton" android:layout_alignParentRight="true"
                    android:background="@drawable/cloud" android:contentDescription="home"/>
        </RelativeLayout>
        <ImageView android:id="@+id/selected_imageview" android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true" android:contentDescription="@string/selected"
                   android:background="@drawable/stash_empty_grey" android:layout_below="@+id/top"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:id="@+id/descriptionLinearLayout"
                android:focusableInTouchMode="true"
                android:layout_alignParentTop="false"
                android:layout_above="@+id/bottom" android:layout_below="@+id/selected_imageview"
                android:layout_marginLeft="30dp" android:layout_marginRight="30dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title:"
                    android:id="@+id/textView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="false"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/titleTextView"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Artist's comments"
                    android:id="@+id/textView1"
                    android:layout_alignLeft="@+id/textView" android:layout_above="@+id/editText2"
                    android:layout_alignParentLeft="true" android:layout_alignParentTop="false"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/artistCommentsTextView"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Keywords: "
                    android:id="@+id/textView2"
                    android:singleLine="false"
                    android:layout_alignLeft="@+id/textView" android:layout_above="@+id/editText1"
                    android:layout_alignParentLeft="true"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/KeywordsTextView"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="original URL: "
                    android:id="@+id/textView3"
                    android:layout_alignLeft="@+id/textView" android:layout_above="@+id/editText3"
                    android:layout_alignParentLeft="true"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/originalUrlTextView"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Category: "
                    android:id="@+id/textView4" android:layout_gravity="left|center_vertical"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/tCategoryTextView" android:layout_gravity="left|center_vertical"/>
        </LinearLayout>
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_gravity="bottom" android:gravity="bottom" android:id="@+id/bottom"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/availableSpace" android:id="@+id/availableSpaceTextView"
                      android:layout_alignParentLeft="true"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="Total space: " android:id="@+id/totalSpaceTextView" android:gravity="right"
                      android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>